styles.css
html,
body {
  height: 100%;
  margin: 0;
  padding: 0;
  width: 100%;
}

body {
  background-color: #1f1e26;
  box-sizing: border-box;
  color: var(--col-text);
  font-family: "Inter", sans-serif;
  font-size: 11pt;
  height: 100%;
  width: 100%;

  --col-primary: #006891;
  --col-text: #000;
  --col-text-contrast: #fff;
  --dim-page-padding: 0.5in;
  --dim-border-radius: 0.2rem;
}

a,
a:active,
a:hover,
a:visited {
  color: var(--col-primary);
  text-decoration: none;
  font-weight: 600;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: 'Poppins', sans-serif;
}

h1 {
  align-self: center;
  flex: 1;
  font-size: 24pt;
  line-height: 24pt;
  margin: 0;
}

h2 {
  align-items: center;
  background-color: var(--col-primary);
  border-bottom-right-radius: var(--dim-border-radius);
  border-top-right-radius: var(--dim-border-radius);
  color: var(--col-text-contrast);
  display: inline-flex;
  flex-direction: row;
  font-size: 18pt;
  gap: 4pt;
  line-height: 18pt;
  margin: 1rem 0 0 0;
  margin-top: 1rem;
  margin-left: calc(var(--dim-page-padding) * -1);
  padding: 0.4em 0.6em 0.4em var(--dim-page-padding);
}


h3 {
  padding: 0.2em 0.6em 0.2em 0;
  font-size: 14pt;
  grid-column-end: span 2;
  line-height: 14pt;
  margin: 1.2em 0 0;
}


h4 {
  font-size: 12pt;
  line-height: 12pt;
  font-weight: 600;
  margin: 0 0 1em;
}

header {
  background-color: var(--col-primary);
  border-bottom-right-radius: var(--dim-border-radius);
  border-top-right-radius: var(--dim-border-radius);
  color: var(--col-text-contrast);
  display: inline-flex;
  flex-direction: row;
  font-family: 'Poppins', sans-serif;
  font-weight: 600;
  margin-left: calc(var(--dim-page-padding) * -1);
  overflow: hidden;
  padding: 0.2in var(--dim-page-padding);
  position: relative;
  text-shadow: 0 0 0.2em var(--col-primary), 0 0 0.2em var(--col-primary), 0 0 0.2em var(--col-primary), 0 0 0.2em var(--col-primary);
}

header>* {
  position: relative;
  z-index: 1;
}

header::before {
  background: url("hex.svg");
  content: " ";
  height: 1000%;
  left: -50%;
  pointer-events: none;
  position: absolute;
  top: -50%;
  transform: translate(-50%, -50%) rotate(-12deg);
  width: 1000%;
  z-index: 0;
}

header a,
header a:active,
header a:hover,
header a:visited {
  color: var(--col-text-contrast);
}

main>section>p {
  margin-top: 1em;
}

p {
  margin: 0.8em 0;
}

svg {
  height: 1em;
  vertical-align: middle;
  width: 1em;
}

.buzzwords {
  border-left: 0.03in solid var(--col-primary);
  float: right;
  font-family: 'Poppins', sans-serif;
  font-size: 10pt;
  font-weight: bold;
  list-style: none;
  margin: 1rem;
  margin-right: 0;
  padding: 0;
}

.buzzwords li {
  padding-left: 1em;
}

.buzzwords-header {
  background-color: var(--col-primary);
  border-bottom-right-radius: var(--dim-border-radius);
  border-top-right-radius: var(--dim-border-radius);
  color: var(--col-text-contrast);
  margin-bottom: 0.4em;
  padding: 0.4em 1em !important;
}

.buzzwords-header h2 {
  font-size: inherit;
  line-height: inherit;
  margin: 0;
  padding: 0;
}

.contact {
  font-size: 10pt;
  margin: 0;
  padding-left: 3em;
}

.contact li {
  list-style: none;
  margin: 0.2em 0;
}

.dates {
  font-family: 'Poppins', sans-serif;
  font-size: 9pt;
  font-weight: 300;
  line-height: 9pt;
  margin-bottom: 0.8rem;
}

.grid {
  display: grid;
  column-count: 2;
}

.icon {
  height: 14pt;
  padding-right: 0.5em;
  vertical-align: middle;
}

.page {
  background-color: #fff;
  box-shadow: 0 0.1in 0.1in #000;
  box-sizing: border-box;
  height: 11in;
  margin: 0.2in auto;
  max-width: 8.5in;
  overflow: hidden;
  padding-top: calc(var(--dim-page-padding) * 0.6);
  padding: var(--dim-page-padding);
  page-break-after: always;
  position: relative;
  width: 100%;
}

.stale-warning {
  color: #000;
  display: none;
  font-family: 'Poppins', sans-serif;
  font-size: 8pt;
  left: var(--dim-page-padding);
  position: absolute;
  top: calc(var(--dim-page-padding) * 0.5);
  z-index: 2;
}

@media screen and (max-width: 8.5in) {
  body {
    --dim-page-padding: 0.2in;
  }

  h2 {
    display: block;
  }

  header {
    display: block;
  }

  .buzzwords {
    float: none;
    border-left: none;
    margin-left: 0;
  }

  .buzzwords li {
    padding-left: 0;
  }

  .buzzwords li.buzzwords-header {
    margin-left: calc(var(--dim-page-padding) * -1);
    padding-left: var(--dim-page-padding);
  }

  .buzzwords li.buzzwords-header h2 {
    display: inline;
  }

  .contact {
    margin: 1em 0;
    padding: 0;
  }

  .page {
    box-shadow: none;
    border-bottom: 2px solid #444;
    height: unset;
    margin: 0;
    max-height: unset;
  }
}

@media print {
  body {
    padding: 0 !important;

    --col-primary: #000;
    --col-text: #000;
    --col-text-contrast: #fff;
  }

  body,
  .page {
    height: 100% !important;
    margin: 0 !important;
    position: relative !important;
    width: 100% !important;
  }

  .page {
    box-shadow: none;
  }

  header {
    background-color: #fff;
    color: #000;
    text-shadow: none;
    border: 2px solid #000;
    border-left: none;
  }

  header::after {
    background: none;
    content: " ";
  }

  h2 {
    background-color: #fff;
    border: 2px solid #000;
    border-left: none;
  }

  a {
    color: var(--col-text) !important;
  }

  svg {
    color: #000;
  }


  .buzzwords li.buzzwords-header {
    border: 2px solid #000;
    border-left: none;
  }

  .buzzwords li.buzzwords-header h2 {
    border: none;
  }

  .stale-warning {
    display: block;
  }
}

@page {
  margin: 0 !important;
}

